--- a/ui/css/wombat.css
+++ b/ui/css/wombat.css
@@ -16,6 +16,11 @@ QWidget
     background-color: #323232;
 }
 
+QWidget:disabled
+{
+  color: grey;
+}
+
 QWidget:item:hover
 {
     background-color: #507098;
@@ -49,8 +54,8 @@ QMenuBar::item:pressed
 {
     border: 1px solid #000;
     background-color: #444;
-    margin-bottom:-1px;
-    padding-bottom:1px;
+    margin-bottom: -1px;
+    padding-bottom: 1px;
 }
 
 /* ==================================================================================== */
@@ -79,17 +84,10 @@ QMenu::item:disabled
     padding: 2px 20px 2px 20px;
 }
 
-
 QMenu::item:selected
 {
     background-color: #507098;
     color: #A9A9A9;
-}
-
-QWidget:disabled
-{
-    color: #404040;
-    background-color: #1e1e1e;
 }
 
 QAbstractItemView,
@@ -99,7 +97,7 @@ QAbstractItemView,
 }
 
 QLineEdit, QPushButton, QDateEdit, QPixmap,
-QDoubleSpinBox, QSpinBox, QSplitter::handle, QSplitter, QFrame
+QDoubleSpinBox, QSpinBox
 {
     color: #A9A9A9;
     background-color: #222;
@@ -153,57 +151,6 @@ QDateEdit::down-arrow, QComboBox::down-arrow
 QTextEdit:focus
 {
     border: 2px solid QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #d7801a);
-}
-
-/* ==================================================================================== */
-/* SCROLL BAR                                                                           */
-/* ==================================================================================== */
-
-QScrollBar::down-arrow:vertical {
-   image: url(ui/css/down_arrow.png);
-}
-
-QScrollBar::up-arrow:vertical {
-   image: url(ui/css/up_arrow.png);                     
-}
-
-QScrollBar {
-  border-style: none;
-}
-
-QScrollBar:horizontal {
-    background-color: #333;
-    height: 8px;
-    margin: 0px;
-    padding: 0px;
-}
-
-QScrollBar::handle:horizontal {
-    border: 1px solid #111;
-    background: #535353;
-}
-
-QScrollBar::add-line:horizontal, QScrollBar::sub-line:horizontal,
-QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
-    width: 0px;
-    background: transparent;
-}
-
-QScrollBar:vertical {
-    background-color: #333;
-    width: 8px;
-    margin: 0;
-}
-
-QScrollBar::handle:vertical {
-    border: 1px solid #111;
-    background: #535353;
-}
-
-QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical, 
-QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
-    height: 0px;
-    background: transparent;
 }
 
 QTextEdit
@@ -327,35 +274,11 @@ QTabBar::tab:!selected
     color: #b1b1b1;
     border-bottom-style: solid;
     margin-top: 3px;
-    /*background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #212121, stop:.4 #343434);*/
 }
 
 QTabBar::tab:selected
 {
     margin-bottom: 0px;
-}
-
-QTabBar::tab:!selected:hover
-{
-    /*border-top: 2px solid #ffaa00;
-    padding-bottom: 3px;*/
-    /*background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #212121, stop:0.4 #343434, stop:0.2 #343434, stop:0.1 #ffaa00);*/
-}
-
-/* ==================================================================================== */
-/* CHECKBOX                                                                             */
-/* ==================================================================================== */
-
-QCheckBox:disabled {
-    color: #414141;
-}
-
-QCheckBox::indicator {
-    color: #222;
-}
-
-QCheckBox::indicator:disabled, QRadioButton::indicator:disabled {
-    border: 1px solid #444;
 }
 
 QAbstractItemView::selected {
@@ -420,3 +343,79 @@ QTableWidget {
     alternate-background-color: #323233;
 }
 
+/* ==================================================================================== */
+/* SCROLL BAR                                                                           */
+/* ==================================================================================== */
+QScrollBar {
+  background: #3e3e42;
+  border-style: none;
+}
+
+QScrollBar::add-line:vertical
+{
+    background: white;
+    height: 0px;
+    subcontrol-position: bottom;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::sub-line:vertical
+{
+    background: white;
+    height: 0px;
+    subcontrol-position: top;
+    subcontrol-origin: margin;
+}
+
+QScrollBar:QScrollBar::down-arrow:vertical
+{
+    width: 10;
+    height: 10px;
+    background: white;
+}
+
+QScrollBar:QScrollBar::up-arrow:vertical
+{
+    width: 10px;
+    height: 10px;
+    background: white;
+}
+ 
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
+{
+    background: none;
+}
+
+QScrollbar::horizontal {
+  height: 15px;
+  margin: 0px 20px 0 20px;
+}
+
+QScrollBar:handle {
+  border-style: none;
+  background: #9d9d9d;
+  margin: inherited;
+}
+
+QTreeView {
+  background-color: #2d2d30;
+  border-style: none;
+}
+
+QTreeView::item:selected
+{
+  background: #007acc;
+}
+
+QTreeView::item:selected!active {
+  background: #3f3f46;
+}
+
+QTreeView::item:selected {
+  background: #3f3f46;
+}
+
+QListView {
+  background-color: #252526;
+  border-style: none;
+}
